syntax = "proto3";

package api.videoApi.service.v1;

option go_package = "lehu-video/api/videoApi/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.videoApi.service.v1";

import "api/videoApi/service/v1/base.proto";
import "google/api/annotations.proto";

// =======================
// 消息服务 API
// =======================
service MessageService {
  // 发送消息
  rpc SendMessage(SendMessageReq) returns (SendMessageResp) {
    option (google.api.http) = {
      post: "/v1/message"
      body: "*"
    };
  };

  // 获取消息列表
  rpc ListMessages(ListMessagesReq) returns (ListMessagesResp) {
    option (google.api.http) = {
      post: "/v1/messages/list"
      body: "*"
    };
  };

  // 撤回消息
  rpc RecallMessage(RecallMessageReq) returns (RecallMessageResp) {
    option (google.api.http) = {
      delete: "/v1/message/{message_id}"
    };
  };

  // 标记消息已读
  rpc MarkMessagesRead(MarkMessagesReadReq) returns (MarkMessagesReadResp) {
    option (google.api.http) = {
      post: "/v1/messages/read"
      body: "*"
    };
  };

  // 获取会话列表
  rpc ListConversations(ListConversationsReq) returns (ListConversationsResp) {
    option (google.api.http) = {
      post: "/v1/conversations"
      body:"*"
    };
  };

  // 删除会话
  rpc DeleteConversation(DeleteConversationReq) returns (DeleteConversationResp) {
    option (google.api.http) = {
      delete: "/v1/conversation/{conversation_id}"
    };
  };

  // 清空聊天记录
  rpc ClearMessages(ClearMessagesReq) returns (ClearMessagesResp) {
    option (google.api.http) = {
      delete: "/v1/messages"
    };
  };

  // 获取未读消息数
  rpc GetUnreadCount(GetUnreadCountReq) returns (GetUnreadCountResp) {
    option (google.api.http) = {
      get: "/v1/messages/unread-count"
    };
  };

  // 更新消息状态（WebSocket 回调）
  rpc UpdateMessageStatus(UpdateMessageStatusReq) returns (UpdateMessageStatusResp) {
    option (google.api.http) = {
      post: "/v1/message/status"
      body: "*"
    };
  };

  // 创建会话（可选发送初始消息）
  rpc CreateConversation(CreateConversationReq) returns (CreateConversationResp) {
    option (google.api.http) = {
      post: "/v1/conversation"
      body: "*"
    };
  };

  // 获取会话详情
  rpc GetConversationDetail(GetConversationDetailReq) returns(GetConversationDetailResp){
    option (google.api.http) = {
      get: "/v1/conversation/{conversation_id}"
    };
  }
}

// =======================
// 枚举定义（保持和内部一致）
// =======================
enum MessageType {
  TEXT = 0;
  IMAGE = 1;
  VOICE = 2;
  _VIDEO = 3;
  FILE = 4;
  SYSTEM = 99;
}

enum ConversationType {
  SINGLE = 0;
  GROUP = 1;
}

enum MessageStatus {
  SENDING = 0;
  SENT = 1;
  DELIVERED = 2;
  READ = 3;
  RECALLED = 4;
  FAILED = 99;
}

// =======================
// 消息模型
// =======================
message MessageContent {
  string text = 1;
  string image_url = 2;
  int64 image_width = 3;
  int64 image_height = 4;
  string voice_url = 5;
  int64 voice_duration = 6;
  string video_url = 7;
  string video_cover = 8;
  int64 video_duration = 9;
  string file_url = 10;
  string file_name = 11;
  int64 file_size = 12;
  string extra = 13;
}

message Message {
  string id = 1;              // 改为 string
  string conversation_id = 2; // 改为 string
  string sender_id = 3;       // 改为 string
  string receiver_id = 4;     // 改为 string
  ConversationType conv_type = 5;
  MessageType msg_type = 6;
  MessageContent content = 7;
  MessageStatus status = 8;
  bool is_recalled = 9;
  string created_at = 10;
  string updated_at = 11;
}

// =======================
// 会话模型
// =======================
message Conversation {
  string id = 1;              // 改为 string
  ConversationType type = 2;
  string group_id = 3;        // 改为 string
  string name = 4;
  string avatar = 5;
  string last_message = 6;
  MessageType last_msg_type = 7;
  int64 last_msg_time = 8;    // 时间戳 int64 没问题，不会溢出
  int64 unread_count = 9;
  int64 member_count = 10;
  bool is_pinned = 11;
  bool is_muted = 12;
  string created_at = 13;
  string updated_at = 14;
  repeated string member_ids = 15;
}

// =======================
// RPC 请求 / 响应
// =======================

// 发送消息
message SendMessageReq {
  string conversation_id = 1; // 第一次发消息的时候可能没会话id,那第一次消息会自动创建会话的
  string receiver_id = 2; // 单聊的时候传用户id, 群聊的时候传群id
  ConversationType conv_type = 3;
  MessageType msg_type = 4;
  MessageContent content = 5;
  string client_msg_id = 6;
}

message SendMessageResp {
  string message_id = 1;       // 改为 string
  string conversation_id = 2;  // 改为 string
}

// 获取消息列表
message ListMessagesReq {
  string conversation_id = 1;  // 改为 string
  string last_msg_id = 2;      // 改为 string
  int32 limit = 3;
}

message ListMessagesResp {
  repeated Message messages = 1;
  bool has_more = 2;
  string last_msg_id = 3;      // 改为 string
}

// 撤回消息
message RecallMessageReq {
  string message_id = 1;
}

message RecallMessageResp {}

// 标记已读
message MarkMessagesReadReq {
  string conversation_id = 1;
  string last_msg_id = 2;
}

message MarkMessagesReadResp {}

// 获取会话列表
message ListConversationsReq {
  PageStatsReq page_stats = 1;
}

message ListConversationsResp {
  repeated Conversation conversations = 1;
  PageStatsResp page_stats = 2;
}

// 删除会话
message DeleteConversationReq {
  string conversation_id = 1;
}

message DeleteConversationResp {}

// 清空消息
message ClearMessagesReq {
  string conversation_id = 1;
}

message ClearMessagesResp {}


// 获取未读消息数
message GetUnreadCountReq {
  string conversation_id = 1;          // 可选，会话ID
  ConversationType conv_type = 2;
}

message GetUnreadCountResp {
  int64 total_unread = 1;       // 总未读数
  int64 conv_unread = 2;        // 单会话未读数
}

// 更新消息状态
message UpdateMessageStatusReq {
  string message_id = 1;
  MessageStatus status = 2;
}

message UpdateMessageStatusResp {}

// 创建会话
message CreateConversationReq {
  string receiver_id = 1; // 单聊的时候传用户id
  string group_id = 2; // 群聊的时候传群id
  ConversationType conv_type = 3;
  string initial_message = 4;
}

message CreateConversationResp {
  string conversation_id = 1;
}

message GetConversationDetailReq{
  string conversation_id = 1;
}

message GetConversationDetailResp{
  Conversation conversation = 1;
}